# linear-algebra-libcpp

./: CMakeLists.txt  build_and_test.sh
.cache/clangd/index/: __stdarg___gnuc_va_list.h.EA079F863E84A1AC.idx  __stddef_header_macro.h.D90591CD7068D498.idx  __stddef_max_align_t.h.A7B82BA5649F8ECB.idx  __stddef_null.h.58DEDFEE1CC097B3.idx  __stddef_nullptr_t.h.216C867F8DF04B97.idx  __stddef_offsetof.h.589A023D469635AB.idx  __stddef_ptrdiff_t.h.46B4F9D0F2FF745A.idx  __stddef_size_t.h.2B38CDC93B19B79B.idx  __stddef_wchar_t.h.FA3906E64330EE18.idx  __wmmintrin_aes.h.904E687B8144CDA9.idx  __wmmintrin_pclmul.h.022F0461ADF2F037.idx  adcintrin.h.2C0B5E6D10F468F4.idx  adxintrin.h.DFD9C42749F8E154.idx  algorithm.8A5FD69C51DF8BA3.idx  align.h.D66C59AAFBA9E530.idx  alloc_traits.h.A844DC2D52719F34.idx  alloca.h.793370BF9878CFB6.idx  allocated_ptr.h.70410E8C62EC6C3B.idx  amxcomplexintrin.h.1024AF822B1AB1D9.idx  amxfp16intrin.h.99AA543BDA361632.idx  amxintrin.h.8D27762BA1F66308.idx  any.48A87E8EDDA43526.idx  array.2B0F72C0ACC52B1B.idx  atomic.BC6FAD3ED3922564.idx  atomic_base.h.5CAE7DD0D5FEA870.idx  atomic_timed_wait.h.EB34E49F78733848.idx  atomic_wait.h.2D4D4D986B022B74.idx  auto_ptr.h.F72E6F8ABA6777B5.idx  avx2intrin.h.54A745E96BD22120.idx  avx512bf16intrin.h.F731ECE8B8A9BE2A.idx  avx512bitalgintrin.h.E4136B12F5950877.idx  avx512bwintrin.h.D49D7678A9B171B7.idx  avx512cdintrin.h.B262DAB17CC37931.idx  avx512dqintrin.h.678AB2898D090022.idx  avx512fintrin.h.CE2A185363856E15.idx  avx512fp16intrin.h.E5A32B654021FC0B.idx  avx512ifmaintrin.h.5588CE5A750751A4.idx  avx512ifmavlintrin.h.8CE2EE1F07589CD1.idx  avx512vbmi2intrin.h.A93C5E60BAFA62A2.idx  avx512vbmiintrin.h.993EFDE92B70787B.idx  (+237 more)
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  vector_matrix_benchmark.cpp
include/linear_algebra/: block_matrix.hpp  hybrid_vector.hpp  static_vector.hpp  vector.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  dummy_test  dummy_test.cpp  test_block_matrix.cpp  test_hybrid_vector.cpp  test_vector.cpp
tests/block_matrix/: test_construction.cpp  test_element_access.cpp  test_initializer_list.cpp  test_matrix_operations.cpp
tests/hybrid_vector/: test_access.cpp  test_construction.cpp  test_operations.cpp  test_simd.cpp
tests/static_vector/: test_static_vector.cpp
